--- a/icongenie/package.json
+++ b/icongenie/package.json
@@ -55,6 +55,9 @@
     "untildify": "^4.0.0",
     "update-notifier": "^5.1.0"
   },
+  "resolutions": {
+    "minimist": "^1.2.6"
+  },
   "publishConfig": {
     "access": "public"
   }
